# Individual_rust_cli

./: README.md
mapservice/: Cargo.toml  Dockerfile  Makefile
mapservice/src/: lib.rs  main.rs
