[package]
name = "mapservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
google_maps = "3.0.1"
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "4.1.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
